# gallium_ecs

./: Cargo.toml  README.md
crates/gallium_ecs/: Cargo.toml
crates/gallium_ecs/src/: component.rs  entity.rs  lib.rs  scene.rs  support.rs  system.rs  world.rs
crates/gallium_ecs_derive/: Cargo.toml
crates/gallium_ecs_derive/src/: lib.rs
examples/: ecs.rs  ecs_serialization.rs  scene_management.rs  test_scene.ron
src/: lib.rs
