[package]
name = "gallium"
version = "0.1.1"
edition = "2018"
description = "A simple entity-component-system crate for rust with serialization support"
license = "GPL-3.0"

[workspace]
members = ["crates/*"]

[dependencies]
serde = "*"
typetag = "*"
ron = "*"

gallium_ecs = {path = "crates/gallium_ecs", version = "0.2.0"}
gallium_ecs_derive = {path = "crates/gallium_ecs_derive", version = "0.1.0"}