[package]
name = "gallium_ecs"
version = "0.1.0"
edition = "2018"
description = "A simple entity-component-system crate for rust with serialization support"
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.127"
ron = "0.6.4"
typetag = "0.1"